--- a/content/about/index.asciidoc
+++ b/content/about/index.asciidoc
@@ -11,14 +11,16 @@ Before joining Decodable, I spent ten years at Red Hat, where I led the Debezium
 I have been a long-time committer to multiple link:/projects[open-source projects], including Hibernate, kcctl, JfrUnit, MapStruct and Deptective;
 I also serve as the spec lead for Bean Validation 2.0 (first at the JCP, now under the Jakarta EE umbrella at the Eclipse Foundation).
 
-Named a https://apex.oracle.com/pls/apex/f?p=19297:3::::::[Java Champion], I'm regularly link:/conferences[speaking] at conferences such as QCon, JavaOne, Red Hat Summit, JavaZone, JavaLand and Kafka Summit.
+Named a https://apex.oracle.com/pls/apex/f?p=19297:3::::::[Java Champion], I enjoy link:/conferences[speaking] at conferences, for instance at QCon, JavaOne, Red Hat Summit, JavaZone, JavaLand and Kafka Summit.
 
 Occasionally, I link:/blog[blog] about topics related to software engineering.
 
 == Speaker Information
 
+The following information can be used on conference websites.
+
 **Title:** Senior Staff Software Engineer at Decodable
 
-**Bio:** Gunnar Morling is a software engineer and open-source enthusiast by heart, currently working at Decodable on stream processing based on Apache Flink. In his prior role as a software engineer at Red Hat, he led the Debezium project, a distributed platform for change data capture. He is a Java Champion and has founded multiple open source projects such as JfrUnit, kcctl, and MapStruct. Gunnar is an avid blogger (morling.dev) and has spoken at a wide range of conferences like QCon, Java One, and Devoxx. He lives in Hamburg, Germany.
+**Bio:** Gunnar Morling is a software engineer and open-source enthusiast by heart, currently working at Decodable on stream processing based on Apache Flink. In his prior role as a software engineer at Red Hat, he led the Debezium project, a distributed platform for change data capture. He is a Java Champion and has founded multiple open source projects such as JfrUnit, kcctl, and MapStruct. Gunnar is an avid blogger (morling.dev) and has spoken at various conferences like QCon, Java One, and Devoxx. He lives in Hamburg, Germany.
 
 **Head shot:** link:/images/gunnar_morling_500.jpg[500px], link:/images/gunnar_morling_1000.jpg[1000px]
