--- a/content/conferences/index.asciidoc
+++ b/content/conferences/index.asciidoc
@@ -11,6 +11,10 @@ I have spoken at large conferences such as QCon San Francisco, Devoxx and JavaOn
 
 If you'd like to have me as a speaker at your conference or meet-up, please get in touch.
 
+== 2023
+
+* jProfessionals (Sofia): https://jug.bg/events/jprofessionals-winter-edition-23/["Change Stream Processing with Debezium and Apache Flink"]
+
 == 2022
 
 * Devoxx (Antwerp): https://devoxx.be/talk/?id=20403[Taming Kafka Connect with kcctl]
