--- a/content/podcasts/index.asciidoc
+++ b/content/podcasts/index.asciidoc
@@ -5,8 +5,9 @@ draft: false
 type: "page"
 ---
 
-I had the pleasure to do a few podcasts and interviews, mostly around Debezium and change data capture.
+I had the pleasure to do a few podcasts and interviews, e.g. talking about Debezium, change data capture, stream processing, and software engineering in general.
 
+* The Modern Data Show: https://www.moderndatastack.xyz/podcast/s02-e03-innovating-the-modern-data-stack-change-data-capture-and-beyond-with-g-7510[S02 E03: Innovating the Modern Data Stack: Change Data Capture and Beyond with Gunnar Morling]
 * The Geek Narrator: https://www.youtube.com/watch?v=VGH6TlhEJpM[Change Data Capture and Debezium with Gunnar Morling]
 * A Bootiful Podcast: https://spring.io/blog/2022/12/01/a-bootiful-podcast-java-champion-gunnar-morling-about-messaging-middleware-debezium-change-data-capture-and-more[Java Champion Gunnar Morling about messaging middleware, Debezium, change data capture, and more.]
 * Trino Community Broadcast: https://www.youtube.com/watch?v=yuJ1r_xUcAo[Episode #25: Trino Going Through Changes]; together with Ashhar Hasan and Ayush Chauhan
