--- a/content/conferences/index.asciidoc
+++ b/content/conferences/index.asciidoc
@@ -13,10 +13,13 @@ If you'd like to have me as a speaker at your conference or meet-up, please get 
 
 == 2023
 
+
 * jProfessionals (Sofia): https://jug.bg/events/jprofessionals-winter-edition-23/["Change Stream Processing with Debezium and Apache Flink"]
 
 == 2022
 
+* Data Council (Austin): https://www.datacouncil.ai/talks/change-data-streaming-patterns-with-debezium-apache-flink[Change Data Streaming Patterns With Debezium & Apache Flink]
+* QCon London: https://qconlondon.com/presentation/mar2023/change-data-capture-microservices[Change Data Capture for Microservices]; I also was the host for the https://qconlondon.com/track/mar2023/building-modern-backends[Building Modern Backends] track
 * Devoxx (Antwerp): https://devoxx.be/talk/?id=20403[Taming Kafka Connect with kcctl]
 * Devoxx (Antwerp): https://devoxx.be/talk/?id=20401[Keep Your Cache Always Fresh with Debezium!]
 * Current (Austin): https://2022.currentevent.io/website/39543/speakers/[Keep Your Cache Always Fresh with Debezium!]
