--- a/content/podcasts/index.asciidoc
+++ b/content/podcasts/index.asciidoc
@@ -7,6 +7,7 @@ type: "page"
 
 I had the pleasure to do a few podcasts and interviews, e.g. talking about Debezium, change data capture, stream processing, my career, and software engineering in general.
 
+* The Geek Narrator: https://www.youtube.com/watch?v=_lMOYsYUpDc[Decoding Decodable with Gunnar Morling]
 * The Data Stack Show: https://podcasts.apple.com/us/podcast/data-council-week-ep-6-all-about-debezium-and-change/id1526164119?i=1000610834720&uo=4[All About Debezium and Change Data Capture With Gunnar Morling of Decodable]
 * Real-Time Analytics Podcast: https://www.youtube.com/watch?v=cyeKnfdjQlw[Mr. Debezium on Pinot, Flink, CDC & Decodable | Ep. 4: Gunnar Morling]
 * SaaS Developer Community: https://www.youtube.com/watch?v=rZzmu1KuyTc[The Wonders of Postgres Logical Decoding Messages]
