--- a/content/conferences/index.asciidoc
+++ b/content/conferences/index.asciidoc
@@ -13,6 +13,8 @@ If you'd like to have me as a speaker at your conference or meet-up, please get 
 
 == 2023
 
+* Current (San José): https://events.bizzabo.com/468544/agenda/session/1136877[Debezium Snapshots Revisited!]
+* JavaZone (Oslo): https://vimeo.com/862061927[Real-time Change Stream Processing with Apache Flink]
 * Kafka Summit (London): https://www.kafka-summit.org/sessions/taming-kafka-connect-with-kcctl[Taming Kafka Connect with kcctl]
 * Data Council (Austin): https://www.datacouncil.ai/talks/change-data-streaming-patterns-with-debezium-apache-flink[Change Data Streaming Patterns With Debezium & Apache Flink]
 * QCon London: https://qconlondon.com/presentation/mar2023/change-data-capture-microservices[Change Data Capture for Microservices]; I also was the host for the https://qconlondon.com/track/mar2023/building-modern-backends[Building Modern Backends] track
