Adding link to RDS

--- a/content/blog/can-debezium-loose-events.asciidoc
+++ b/content/blog/can-debezium-loose-events.asciidoc
@@ -31,6 +31,8 @@ and the maximum transaction log retention time is reached.
 Most of the databases provide some sort of configuration parameter for controlling this behavior.
 In MySQL for instance, there is the https://dev.mysql.com/doc/refman/8.2/en/replication-options-binary-log.html#sysvar_binlog_expire_logs_seconds[`binlog_expire_logs_seconds`] parameter for this purpose
 (which defaults to 2,592,000 seconds, i.e. 30 days).
+When you are using MySQL on Amazon RDS,
+the option to use is called https://docs.aws.amazon.com/AmazonRDS/latest/UserGuide/mysql-stored-proc-configuring.html[`binlog retention hours`].
 For SQL Server, the retention time for CDC data can be configured using the stored procedure https://learn.microsoft.com/en-us/sql/relational-databases/system-stored-procedures/sys-sp-cdc-change-job-transact-sql?view=sql-server-ver16[`sys.sp_cdc_change_job()`].
 
 In contrast, Postgres approaches this matter a bit differently:
