Typo fix in title and URL

--- a/content/blog/can-debezium-lose-events.asciidoc
+++ b/content/blog/can-debezium-lose-events.asciidoc
@@ -1,8 +1,10 @@
 ---
-title: "Can Debezium Loose Events?"
+title: "Can Debezium Lose Events?"
 date: 2023-11-14T15:00:00+01:00
 draft: false
 markup: adoc
+aliases:
+- "/blog/can-debezium-loose-events"
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
@@ -13,7 +15,7 @@ ifdef::env-github[]
 endif::[]
 
 This question came up on the Data Engineering sub-reddit the other day:
-https://old.reddit.com/r/dataengineering/comments/17ttw5e/can_debezium_loose_updates/[Can Debezium loose any events]?
+https://old.reddit.com/r/dataengineering/comments/17ttw5e/can_debezium_loose_updates/[Can Debezium lose any events]?
 I.e. can there be a situation where a record in a database get inserted, updated, or deleted, but Debezium fails to capture that event from the transaction log and propagate it to downstream consumers?
 
 <!--more-->
