--- a/content/conferences/index.asciidoc
+++ b/content/conferences/index.asciidoc
@@ -13,6 +13,8 @@ If you'd like to have me as a speaker at your conference or meet-up, please get 
 
 == 2023
 
+* Open Source Data Infrastructure Meetup (Berlin): https://www.meetup.com/berlin-open-source-data-infrastructure-meetup/[From Postgres to OpenSearch in No Time]
+* Flink Forward (Seattle): https://www.flink-forward.org/seattle-2023/agenda#debezium-snapshots-revisited-[Debezium Snapshots Revisited!]
 * Current (San José): https://events.bizzabo.com/468544/agenda/session/1136877[Debezium Snapshots Revisited!]
 * JavaZone (Oslo): https://vimeo.com/862061927[Real-time Change Stream Processing with Apache Flink]
 * Kafka Summit (London): https://www.kafka-summit.org/sessions/taming-kafka-connect-with-kcctl[Taming Kafka Connect with kcctl]
