Linking to SapMachine

--- a/content/blog/tracking-java-native-memory-with-jdk-flight-recorder.asciidoc
+++ b/content/blog/tracking-java-native-memory-with-jdk-flight-recorder.asciidoc
@@ -38,7 +38,7 @@ for instance for integration with dashboards and monitoring solutions.
 [NOTE]
 ====
 The list of JFR event types grows with every release.
-If you'd like to learn which event types are available in which Java version, take a look at the https://sap.github.io/SapMachine/jfrevents/[JFR Events] list compiled by https://twitter.com/parttimen3rd[Johannes Bechberger] from the Java team at SAP.
+If you'd like to learn which event types are available in which Java version, take a look at the https://sap.github.io/SapMachine/jfrevents/[JFR Events] list compiled by https://twitter.com/parttimen3rd[Johannes Bechberger] from the https://sapmachine.io[Java team at SAP].
 It also shows you the events added in a particular version, for instance https://sap.github.io/SapMachine/jfrevents/21.html[here] for the new events in Java 21.
 ====
 
