Adding markup tag to support rendering with newer Hugo versions

--- a/content/about/index.asciidoc
+++ b/content/about/index.asciidoc
@@ -3,6 +3,7 @@ title: "About Me"
 date: 2022-11-22T18:45:00+01:00
 draft: false
 type: "page"
+markup: adoc
 ---
 
 I am an open-source software engineer, currently working at https://www.decodable.co/[Decodable], involved with data streaming based on Apache Flink.
