--- a/content/blog/emitter-parameter-pattern-for-flexible-spis.asciidoc
+++ b/content/blog/emitter-parameter-pattern-for-flexible-spis.asciidoc
@@ -2,6 +2,7 @@
 title: "The Emitter Parameter Pattern for Flexible SPI Contracts"
 date: 2020-05-04T17:30:00+02:00
 draft: false
+markup: adoc
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
