--- a/content/blog/fizzbuzz-simd-style.asciidoc
+++ b/content/blog/fizzbuzz-simd-style.asciidoc
@@ -2,6 +2,7 @@
 title: "FizzBuzz – SIMD Style!"
 date: 2021-03-08T16:25:00+01:00
 draft: false
+markup: adoc
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
