--- a/content/blog/introducing-jfrunit-1-0-0-alpha1.asciidoc
+++ b/content/blog/introducing-jfrunit-1-0-0-alpha1.asciidoc
@@ -2,6 +2,7 @@
 title: "Introducing JfrUnit 1.0.0.Alpha1"
 date: 2021-08-04T19:10:00+02:00
 draft: false
+markup: adoc
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
