--- a/content/blog/quarkus-qute-test-ride.asciidoc
+++ b/content/blog/quarkus-qute-test-ride.asciidoc
@@ -2,6 +2,7 @@
 title: "Quarkus Qute – A Test Ride"
 date: 2020-01-03T10:00:00+01:00
 draft: false
+markup: adoc
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
