--- a/content/blog/smaller-faster-starting-container-images-with-jlink-and-appcds.asciidoc
+++ b/content/blog/smaller-faster-starting-container-images-with-jlink-and-appcds.asciidoc
@@ -2,6 +2,7 @@
 title: "Smaller, Faster-starting Container Images With jlink and AppCDS"
 date: 2020-12-13T20:30:00+01:00
 draft: false
+markup: adoc
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
