--- a/content/blog/talking-to-postgres-through-java-16-unix-domain-socket-channels.asciidoc
+++ b/content/blog/talking-to-postgres-through-java-16-unix-domain-socket-channels.asciidoc
@@ -2,6 +2,7 @@
 title: "Talking to Postgres Through Java 16 Unix-Domain Socket Channels"
 date: 2021-01-31T20:25:00+01:00
 draft: false
+markup: adoc
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
