--- a/content/projects/index.asciidoc
+++ b/content/projects/index.asciidoc
@@ -3,6 +3,7 @@ title: "Projects"
 date: 2019-12-26T10:00:00+01:00
 draft: false
 type: "page"
+markup: adoc
 ---
 
 I have contributed to a wide range of open-source projects over the last years.
