--- a/content/blog/automatically-deploying-hugo-website-via-github-actions.asciidoc
+++ b/content/blog/automatically-deploying-hugo-website-via-github-actions.asciidoc
@@ -2,6 +2,7 @@
 title: "Automatically Deploying a Hugo Website via GitHub Actions"
 date: 2019-12-26T10:00:00+01:00
 draft: false
+markup: adoc
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
