--- a/content/blog/exploring-zookeeper-less-kafka.asciidoc
+++ b/content/blog/exploring-zookeeper-less-kafka.asciidoc
@@ -2,6 +2,7 @@
 title: "Exploring ZooKeeper-less Kafka"
 date: 2021-05-17T18:45:00+01:00
 draft: false
+markup: adoc
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
