--- a/content/blog/rest-api-monitoring-with-custom-jdk-flight-recorder-events.asciidoc
+++ b/content/blog/rest-api-monitoring-with-custom-jdk-flight-recorder-events.asciidoc
@@ -3,6 +3,7 @@ title: "Monitoring REST APIs with Custom JDK Flight Recorder Events"
 date: 2020-01-29T15:30:00+01:00
 draft: false
 tags: [java, monitoring, microprofile, jakartaee, quarkus]
+markup: adoc
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
