--- a/content/blog/three-plus-some-lovely-kafka-trends.asciidoc
+++ b/content/blog/three-plus-some-lovely-kafka-trends.asciidoc
@@ -2,6 +2,7 @@
 title: "Three Plus Some Lovely Kafka Trends"
 date: 2021-05-28T10:30:00+02:00
 draft: false
+markup: adoc
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
