--- a/content/blog/time-for-new-blog.asciidoc
+++ b/content/blog/time-for-new-blog.asciidoc
@@ -2,6 +2,7 @@
 title: "Time for a New Blog"
 date: 2019-12-26T10:00:00+01:00
 draft: false
+markup: adoc
 ---
 
 It has been quite a while since the last post on my old http://musingsofaprogrammingaddict.blogspot.com/[personal blog];
