--- a/content/blog/using-java-13-text-blocks-for-tests.asciidoc
+++ b/content/blog/using-java-13-text-blocks-for-tests.asciidoc
@@ -2,6 +2,7 @@
 title: "Using Java 13 Text Blocks (Only) for Your Tests"
 date: 2020-01-13T17:30:00+01:00
 draft: false
+markup: adoc
 ---
 :source-highlighter: rouge
 :rouge-style: base16.dark
