--- a/content/podcasts/index.asciidoc
+++ b/content/podcasts/index.asciidoc
@@ -3,6 +3,7 @@ title: "Podcasts and Interviews"
 date: 2021-09-22T10:00:00+01:00
 draft: false
 type: "page"
+markup: adoc
 ---
 
 I had the pleasure to do a few podcasts and interviews, e.g. talking about Debezium, change data capture, stream processing, my career, and software engineering in general.
