--- a/content/blog/one-billion-row-challenge.asciidoc
+++ b/content/blog/one-billion-row-challenge.asciidoc
@@ -41,7 +41,7 @@ The program should print out the min, mean, and max values per station, alphabet
 {Abha=5.0/18.0/27.4, Abidjan=15.7/26.0/34.1, Abéché=12.1/29.4/35.6, Accra=14.7/26.4/33.1, Addis Ababa=2.1/16.0/24.3, Adelaide=4.1/17.3/29.7, ...}
 ----
 
-The goal of the the 1BRC challenge is to create the fastest implementation for this task,
+The goal of the 1BRC challenge is to create the fastest implementation for this task,
 and while doing so, explore the benefits of modern Java and find out how far you can push this platform.
 So grab all your (virtual) threads, reach out to the Vector API and SIMD, optimize your GC, leverage AOT compilation, or pull any other trick you can think of.
 
