--- a/content/blog/one-billion-row-challenge.asciidoc
+++ b/content/blog/one-billion-row-challenge.asciidoc
@@ -22,7 +22,7 @@ _Update Jan 4: Wow, this thing really took off!_
 _1BRC is discussed at a couple of places on the internet, including https://news.ycombinator.com/item?id=38851337[Hacker News], https://lobste.rs/s/u2qcnf/one_billion_row_challenge[lobste.rs], and https://old.reddit.com/r/programming/comments/18x0x0u/the_one_billion_row_challenge/[Reddit]._
 
 _For folks to show-case non-Java solutions, there is a https://github.com/gunnarmorling/1brc/discussions/categories/show-and-tell["Show & Tell"] now, check that one out for 1BRC implementations in Rust, Go, C++, and others._
-_Some interesting related write-up include https://rmoff.net/2024/01/03/1%EF%B8%8F%E2%83%A3%EF%B8%8F-1brc-in-sql-with-duckdb/[1BRC in SQL with DuckDB] by Robin Moffatt and https://ftisiot.net/posts/1brows/[1 billion rows challenge in PostgreSQL and ClickHouse] by Francesco Tisiot._
+_Some interesting related write-ups include https://rmoff.net/2024/01/03/1%EF%B8%8F%E2%83%A3%EF%B8%8F-1brc-in-sql-with-duckdb/[1BRC in SQL with DuckDB] by Robin Moffatt and https://ftisiot.net/posts/1brows/[1 billion rows challenge in PostgreSQL and ClickHouse] by Francesco Tisiot._
 
 _Thanks a lot for all the submissions, this is going way beyond what I'd have expected!_
 _I am behind a bit with evalutions due to the sheer amount of entries, I will work through them bit by bit._
