--- a/content/blog/one-billion-row-challenge.asciidoc
+++ b/content/blog/one-billion-row-challenge.asciidoc
@@ -26,6 +26,7 @@ _Some interesting related write-ups include https://rmoff.net/2024/01/03/1%EF%B8
 
 _Thanks a lot for all the submissions, this is going way beyond what I'd have expected!_
 _I am behind a bit with evalutions due to the sheer amount of entries, I will work through them bit by bit._
+_I have also made a few clarifications to https://github.com/gunnarmorling/1brc#faq[the rules] of the challenge; please make sure to read them before submitting any entries._
 
 <!--more-->
 
