--- a/content/podcasts/index.asciidoc
+++ b/content/podcasts/index.asciidoc
@@ -8,6 +8,7 @@ markup: adoc
 
 I had the pleasure to do a few podcasts and interviews, e.g. talking about Debezium, change data capture, stream processing, my career, and software engineering in general.
 
+* Happy Path Programming, by Bruce Eckel & James Ward: https://podcasters.spotify.com/pod/show/happypathprogramming/episodes/93-Nerd-Sniping-via-the-1B-Row-Challenge-with-Gunnar-Morling-e2elv9l[Ep. #93: Nerd Sniping via the 1B Row Challenge with Gunnar Morling]
 * Developer Voices: https://www.youtube.com/watch?v=88j7EEiyqzM[Debezium - Capturing Data the Instant it Happens (with Gunnar Morling)]
 * The Geek Narrator: https://www.youtube.com/watch?v=_lMOYsYUpDc[Decoding Decodable with Gunnar Morling]
 * The Data Stack Show: https://podcasts.apple.com/us/podcast/data-council-week-ep-6-all-about-debezium-and-change/id1526164119?i=1000610834720&uo=4[All About Debezium and Change Data Capture With Gunnar Morling of Decodable]
