--- a/content/blog/1brc-results-are-in.asciidoc
+++ b/content/blog/1brc-results-are-in.asciidoc
@@ -37,17 +37,17 @@ These results are from running on eight cores of a 32 core AMD EPYC™ 7502P (Ze
 |===
 <| # | Result (m:s.ms) | Implementation     | JDK | Submitter
 
-| 1
+| **1**
 | 00:01.535
 | https://github.com/gunnarmorling/1brc/blob/main/src/main/java/dev/morling/onebrc/CalculateAverage_thomaswue.java[link]| 21.0.2-graal
 | https://github.com/thomaswue[Thomas Wuerthinger], https://github.com/merykitty[Quan Anh Mai], https://github.com/mukel[Alfonso² Peterssen]
 
-| 2
+| **2**
 | 00:01.587
 | https://github.com/gunnarmorling/1brc/blob/main/src/main/java/dev/morling/onebrc/CalculateAverage_artsiomkorzun.java[link]| 21.0.2-graal
 | https://github.com/artsiomkorzun[Artsiom Korzun]
 
-| 3
+| **3**
 | 00:01.608
 | https://github.com/gunnarmorling/1brc/blob/main/src/main/java/dev/morling/onebrc/CalculateAverage_jerrinot.java[link]| 21.0.2-graal
 | https://github.com/jerrinot[Jaromir Hamala]
@@ -133,9 +133,9 @@ So I ran the fastest 50 entries from the regular evaluation on all 32 cores / 64
 |===
 <| # | Result (m:s.ms) | Implementation     | JDK | Submitter
 
-| 1 | 00:00.323       | https://github.com/gunnarmorling/1brc/blob/main/src/main/java/dev/morling/onebrc/CalculateAverage_jerrinot.java[link]         | 21.0.2-graal | https://github.com/jerrinot[Jaromir Hamala]                                                                                                   
-| 2 | 00:00.326       | https://github.com/gunnarmorling/1brc/blob/main/src/main/java/dev/morling/onebrc/CalculateAverage_thomaswue.java[link]        | 21.0.2-graal | https://github.com/thomaswue[Thomas Wuerthinger], https://github.com/merykitty[Quan Anh Mai], https://github.com/mukel[Alfonso² Peterssen]
-| 3 | 00:00.349       | https://github.com/gunnarmorling/1brc/blob/main/src/main/java/dev/morling/onebrc/CalculateAverage_artsiomkorzun.java[link]    | 21.0.2-graal | https://github.com/artsiomkorzun[Artsiom Korzun]                                                                                              
+| **1** | 00:00.323       | https://github.com/gunnarmorling/1brc/blob/main/src/main/java/dev/morling/onebrc/CalculateAverage_jerrinot.java[link]         | 21.0.2-graal | https://github.com/jerrinot[Jaromir Hamala]                                                                                                   
+| **2** | 00:00.326       | https://github.com/gunnarmorling/1brc/blob/main/src/main/java/dev/morling/onebrc/CalculateAverage_thomaswue.java[link]        | 21.0.2-graal | https://github.com/thomaswue[Thomas Wuerthinger], https://github.com/merykitty[Quan Anh Mai], https://github.com/mukel[Alfonso² Peterssen]
+| **3** | 00:00.349       | https://github.com/gunnarmorling/1brc/blob/main/src/main/java/dev/morling/onebrc/CalculateAverage_artsiomkorzun.java[link]    | 21.0.2-graal | https://github.com/artsiomkorzun[Artsiom Korzun]                                                                                              
 |   | 00:00.351       | https://github.com/gunnarmorling/1brc/blob/main/src/main/java/dev/morling/onebrc/CalculateAverage_abeobk.java[link]           | 21.0.2-graal | https://github.com/abeobk[Van Phu DO]                                                                                                         
 |   | 00:00.389       | https://github.com/gunnarmorling/1brc/blob/main/src/main/java/dev/morling/onebrc/CalculateAverage_stephenvonworley.java[link] | 21.0.2-graal | https://github.com/stephenvonworley[Stephen Von Worley]                                                                                       
 |   | 00:00.408       | https://github.com/gunnarmorling/1brc/blob/main/src/main/java/dev/morling/onebrc/CalculateAverage_yavuztas.java[link]         | 21.0.2-graal | https://github.com/yavuztas[Yavuz Tas]                                                                                                        
@@ -167,9 +167,9 @@ Here are the top 10 results from running the fastest 40 entries of the regular e
 |===
 <| # | Result (m:s.ms) | Implementation                                                                                                                    | JDK          | Submitter                                                
 
-| 1 | 00:02.957       |  https://github.com/gunnarmorling/1brc/blob/main/src/main/java/dev/morling/onebrc/CalculateAverage_artsiomkorzun.java[link]      | 21.0.2-graal | https://github.com/artsiomkorzun[Artsiom Korzun]       
-| 2 | 00:03.058       |  https://github.com/gunnarmorling/1brc/blob/main/src/main/java/dev/morling/onebrc/CalculateAverage_mtopolnik.java[link]          | 21.0.2-graal | https://github.com/mtopolnik[Marko Topolnik]           
-| 3 | 00:03.186       |  https://github.com/gunnarmorling/1brc/blob/main/src/main/java/dev/morling/onebrc/CalculateAverage_stephenvonworley.java[link]   | 21.0.2-graal | https://github.com/stephenvonworley[Stephen Von Worley]
+| **1** | 00:02.957       |  https://github.com/gunnarmorling/1brc/blob/main/src/main/java/dev/morling/onebrc/CalculateAverage_artsiomkorzun.java[link]      | 21.0.2-graal | https://github.com/artsiomkorzun[Artsiom Korzun]       
+| **2** | 00:03.058       |  https://github.com/gunnarmorling/1brc/blob/main/src/main/java/dev/morling/onebrc/CalculateAverage_mtopolnik.java[link]          | 21.0.2-graal | https://github.com/mtopolnik[Marko Topolnik]           
+| **3** | 00:03.186       |  https://github.com/gunnarmorling/1brc/blob/main/src/main/java/dev/morling/onebrc/CalculateAverage_stephenvonworley.java[link]   | 21.0.2-graal | https://github.com/stephenvonworley[Stephen Von Worley]
 |   | 00:03.998       |  https://github.com/gunnarmorling/1brc/blob/main/src/main/java/dev/morling/onebrc/CalculateAverage_royvanrijn.java[link]         | 21.0.2-graal | https://github.com/royvanrijn[Roy van Rijn]            
 |   | 00:04.042       |  https://github.com/gunnarmorling/1brc/blob/main/src/main/java/dev/morling/onebrc/CalculateAverage_jerrinot.java[link]           | 21.0.2-graal | https://github.com/jerrinot[Jaromir Hamala]            
 |   | 00:04.289       |  https://github.com/gunnarmorling/1brc/blob/main/src/main/java/dev/morling/onebrc/CalculateAverage_gonixunsafe.java[link]        | 21.0.1-open  | https://github.com/gonixunsafe[gonix]                  
