--- a/content/blog/1brc-results-are-in.asciidoc
+++ b/content/blog/1brc-results-are-in.asciidoc
@@ -115,12 +115,12 @@ These are faster to start and reach peak performance very quickly (no JIT compil
 As the result times got down to less than two seconds, this makes the deciding difference.
 Note that other entries of the contest also use GraalVM as a JIT compiler for JVM-based entries,
 which also was beneficial for the problem at hand.
-This was exactly the sort of insight I was hoping to gain from 1BRC.
+This is a perfect example for the kind of insight I was hoping to gain from 1BRC.
 A special shout-out to Serkan Özal for creating the fastest JVM-based solution, coming in on a great fourth place!
 
 == Bonus Result: 32 Cores, 64 Threads
 
-For officially evaluating entries into the challenge, each contender was run on eight cores of the evaluation machine.
+For officially evaluating entries into the challenge, each contender was run on eight cores of the target machine.
 This was done primarily to keep results somewhat in the same ballpark as the figures of the originally used machine
 (I had to move to a different environment after a little while,
 re-evaluating all the previous entries).
@@ -186,7 +186,7 @@ Congrats to Artsiom Korzun, whose entry is not only the fastest one in this eval
 
 == Thank You!
 
-I had hoped for 1BRC to be an opportunity to learn something new, inspire others to do the same, and have some fun along the way.
+The goal of 1BRC was to be an opportunity to learn something new, inspire others to do the same, and have some fun along the way.
 This was certainly the case for me, and I think for participants too.
 It was just great to see how folks kept working on their submissions, trying out new approaches and techniques, helping each other to improve their implementations, and even teaming up to create joint entries.
 I feel the decision to allow participants to take inspiration from each other and adopt promising techniques explored by others was absolutely the right one,
@@ -225,7 +225,7 @@ Lastly, here are some more external resources on 1BRC, either on the challenge i
 Java is alive and kicking!
 1BRC has shown that Java and its runtime are powerful and highly versatile tools, suitable also for tasks where performance is of uttermost importance.
 Apart from the tech itself, the most amazing thing about Java is its community though:
-it sparked a tremendous level of joy to witness how folks came together for solving this challenge, learning with and from each other, sharing tricks, and making this a great experience all-around.
+it sparked a tremendous level of joy to witness how folks came together for solving this challenge, learning with and from each other, sharing tricks, and making this a excellent experience all-around.
 
 So I guess it's just natural that some folks asked whether there'd be another challenge like this any time soon,
 when it is going to happen,
@@ -240,7 +240,7 @@ The key challenge (sic!) will be to find a topic which is equally as approachabl
 while providing enough opportunity for exploration and optimization.
 I am sure the community will manage to come up with something here.
 
-For now, congrats again to everyone participating this time around, and a big thank you to everyone helping to make it a reality!
+For now, congrats once again to everyone participating this time around, and a big thank you to everyone helping to make it a reality!
 
 [.text-center]
  1️⃣🐝🏎️
