Adding one more stat

--- a/content/blog/1brc-results-are-in.asciidoc
+++ b/content/blog/1brc-results-are-in.asciidoc
@@ -211,6 +211,7 @@ image::1brc_stargazers.png[width=50%]
 +
 * https://github.com/gunnarmorling/1brc/actions[1,909 workflow runs] on GitHub Actions (it would have been way more, had I set up an action for running the test suite against incoming pull requests earlier, doh)
 * 187 lines of comment in the https://github.com/gunnarmorling/1brc/blob/main/src/main/java/dev/morling/onebrc/CalculateAverage_shipilev.java[entry of Aleksey Shipilëv]
+* 188x speed-up improvement between the baseline implementation and the winning entry
 * ~100 consumed cups of coffee while evaluating the entries
 
 Lastly, here are some more external resources on 1BRC, either on the challenge itself or folks sharing their insights from building a solution
