--- a/content/blog/1brc-results-are-in.asciidoc
+++ b/content/blog/1brc-results-are-in.asciidoc
@@ -20,7 +20,7 @@ In Java, as intended, but also https://github.com/gunnarmorling/1brc/discussions
 folks implemented the challenge in languages such as Go, Rust, C/C++, C#, Fortran, or Erlang, as well databases (Postgres, Oracle, Snowflake, etc.), and tools like awk.
 
 It's really incredible how far people have pushed the limits here.
-Pull request by pull requests, the execution times for solving the problem layed out in the challenge
+Pull request by pull request, the execution times for solving the problem layed out in the challenge
 -- aggregating random temperature values from a file with 1,000,000,000 rows --
 improved by two orders of magnitudes in comparison to the initial baseline implementation.
 Today I am happy to share the final results, as the challenge closed for new entries after exactly one month on Jan 31
