--- a/content/blog/1brc-results-are-in.asciidoc
+++ b/content/blog/1brc-results-are-in.asciidoc
@@ -97,7 +97,7 @@ You can find it at your entry in the leaderboard table.
 image::1brc_certificate.png[width=50%]
 
 Initially I had meant to pay for a  1️⃣🐝🏎️ t-shirt for the winner out of my own pocket.
-But then I remembered I have a corporate credit card ;)
+But then I remembered I have a company credit card ;)
 So I will actually do t-shirts for the Top 3 and a 1BRC coffee mug for the Top 20.
 I will follow up with the winners on the details of getting these to you shortly.
 Thanks a lot to my employer https://www.decodable.co/[Decodable] (we build a SaaS for real-time ETL and stream processing, you should totally check us out!) for sponsoring not only these prizes,
