--- a/content/about/index.asciidoc
+++ b/content/about/index.asciidoc
@@ -24,12 +24,12 @@ The following information can be used on conference websites.
 
 === English
 
-**Title:** Senior Staff Software Engineer at Decodable
+**Title:** Senior Staff Software Engineer, Decodable
 
 **Bio:** Gunnar Morling is a software engineer and open-source enthusiast by heart, currently working at Decodable on real-time ETL based on Apache Flink. In his prior role as a software engineer at Red Hat, he led the Debezium project, a distributed platform for change data capture. He is a Java Champion and has founded multiple open source projects such as JfrUnit, kcctl, and MapStruct. Gunnar is an avid blogger (morling.dev) and has spoken at various conferences like QCon, Java One, and Devoxx. He lives in Hamburg, Germany.
 
 === Deutsch
 
-**Title:** Senior Staff Software Engineer at Decodable
+**Titel:** Senior Staff Software Engineer, Decodable
 
 **Bio:** Gunnar Morling ist Softwareentwickler und Open-Source-Enthusiast, gegenwärtig tätig für Decodable, wo er an einer Real-Time-ETL-Plattform basierend auf Apache Flink arbeitet. Zuvor leitete er das Debezium-Projekt, eine verteilte Lösung für Change Data Capture. Er ist ein Java Champion und hat diverse Open-Source-Projekte wie JfrUnit, kcctl und MapStruct ins Leben gerufen. Gunnar bloggt auf morling.dev und teilt seine Erfahrungen in Vorträgen, u.a. bei JavaLand, QCon, JavaOne und Devoxx. Er lebt und arbeitet in Hamburg.
