Adding missing dot

--- a/content/blog/filtering-process-output-with-tee.asciidoc
+++ b/content/blog/filtering-process-output-with-tee.asciidoc
@@ -97,7 +97,7 @@ Content: hello
 
 http://phala.isatty.net/~amber/hacks/devfd[_/dev/fd_] is a special directory which contains a file descriptor for each file opened by a process.
 So what is _/dev/fd/11_ then?
-Most implementations of process substitution represent ``stdin``/``stdout`` via anonymous pipes
+Most implementations of process substitution represent ``stdin``/``stdout`` via anonymous pipes.
 If we take a look at the list of files opened by the process, we can see that this is the case here too:
 
 [source,bash,linenums=true]
